--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch-a-sketch</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    Etch-a-sketch
+    <header>Etch-a-sketch</header>
+    <div class="content-container">
+      <div class="left-container">
+        <button>Color Selector</button>
+        <button>Color Mode</button>
+        <button>Rainbow Mode</button>
+        <button>Eraser</button>
+        <button>Clear</button>
+        <button>Slider</button>
+      </div>
+      <div class="right-container">Right Panel</div>
+    </div>
+    <footer>Copyright (C) 2022 a1exanderz</footer>
   </body>
 </html>
