Complete createGrid and setCurrentColor functions

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <header>Etch-a-sketch</header>
     <div class="content-container">
       <div class="left-container">
-        <button>Color Selector</button>
+        <input type="color" id="colorInput" />
         <button>Color Mode</button>
         <button>Rainbow Mode</button>
         <button>Eraser</button>
         <button>Clear</button>
-        <button>Slider</button>
+        <input type="range" />
       </div>
-      <div class="right-container">Right Panel</div>
+      <div id="container"></div>
     </div>
     <footer>Copyright (C) 2022 a1exanderz</footer>
+    <script src="etch-a-sketch.js"></script>
   </body>
 </html>
