Complete Color Mode and Rainbow Modes

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <div class="content-container">
       <div class="left-container">
         <input type="color" id="colorInput" />
-        <button>Color Mode</button>
-        <button>Rainbow Mode</button>
-        <button>Eraser</button>
-        <button>Clear</button>
-        <input type="range" />
+        <button id="colorBtn">Color Mode</button>
+        <button id="rainbowBtn">Rainbow Mode</button>
+        <button id="eraserBtn">Eraser</button>
+        <button id="clearBtn">Clear</button>
+        <div>16 x 16</div>
+        <input type="range" id="sizeSlider" />
       </div>
-      <div id="container"></div>
+      <div id="grid"></div>
     </div>
     <footer>Copyright (C) 2022 a1exanderz</footer>
     <script src="etch-a-sketch.js"></script>
