--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <input type="color" id="colorInput" />
         <button id="colorBtn">Color Mode</button>
         <button id="rainbowBtn">Rainbow Mode</button>
-        <button id="eraserBtn">Eraser</button>
+        <button id="eraserBtn">Eraser Mode</button>
         <button id="clearBtn">Clear</button>
-        <div>16 x 16</div>
-        <input type="range" id="sizeSlider" />
+        <div id="gridSize"></div>
+        <input type="range" id="sizeSlider" value="16" min="1" max="64" />
       </div>
       <div id="grid"></div>
     </div>
